collect.out
  File "models/consep/consep.py", line 177
    '''
      ^
SyntaxError: invalid syntax
